--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "js:min": "uglifyjs _site/assets/js/sleek.bundle.js --output _site/assets/js/sleek.bundle.min.js"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.6",
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.0.0",
+    "popper.js": "^1.14.7"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
